--- a/Frontend/scss/main.scss
+++ b/Frontend/scss/main.scss
@@ -2,11 +2,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 /*color*/
-$color-primary: #4aa1fa;
+$color-primary: #004F98;
 $color-white: #fff;
-$color-dark:#333333;
+$color-dark:#1A1A1A;;
 $color-dark2:#444;
 $color-muted:#ccc;
 // mixin
@@ -91,6 +92,7 @@ a {
         padding: 0 20px;
         list-style: none;
         display: flex;
+        flex-wrap: wrap;
          li {
              a{
                 color: $color-white;
@@ -118,6 +120,11 @@ header {
         }
     }
     .header-menu {
+        &__logo{
+            img{
+                max-width: 100%;
+            }
+        }
         @include flexBox(row) {
             align-items: center;
         }
@@ -200,7 +207,7 @@ main {
             bottom: 0;
             right: 0;
             content: '';
-            background-color: rgba($color: #000000, $alpha: 0.3);
+            background-color: rgba($color: #000000, $alpha: 0.5);
             transition: all 0.4s ease 0s;
             opacity: 0;
         }
@@ -227,9 +234,10 @@ main {
                 position: absolute;
                 top: 50%;
                 left: 50%;
+                z-index: 0;
                 transform: translate(-50%,-50%);
-                border: 2px solid $color-white;
-                color: $color-white;
+                border: 3px solid $color-primary;
+                color: $color-primary;
                 padding:5px 10px;
                 opacity: 0;
                 transition: 0.3s all ease 0.2s;
@@ -335,10 +343,17 @@ main {
         }
     }
     .promotion-sec{
+        .img-box{
+            padding:0;
+            max-width: 100%;
+            img{
+                position: unset;
+            }
+        }
         .promotion__left{
-           > div {
-               margin-bottom: 35px;
-           }
+            display: flex;
+            flex-direction:column;
+            justify-content: space-between;
         }
         img{
             display: block;
@@ -350,6 +365,9 @@ main {
         }
     }
     #tab--sec{
+        .img-box{
+            padding-top: 100%;
+        }
         & .tab__controller{
             ul{
                 list-style-type: none;
@@ -395,6 +413,7 @@ main {
                     display: block;
                 }
                 .tab__detail{
+
                     background-color: $color-primary;
                     margin: 0;
                     padding: 40px 0;
@@ -417,7 +436,6 @@ main {
                     padding:0;
                     .slide__container{
                         .silde__item{
-                            margin: 0 10px;
                             border: 1px solid $color-muted;
                             .info{
                                 border-top: 1px solid $color-muted;
@@ -446,5 +464,247 @@ main {
                 }
             }
         }
+    }
+    #post-sec{
+        & .owl-nav{
+            button{
+                width: 30px;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: #fff;
+                border: 2px solid #fff;
+                border-radius: 50%;
+                background-color: rgba($color: $color-primary, $alpha: 0.5);
+                font-size: 30px;
+                position: absolute;
+                top:30%;
+                transform: translateY(-50%);
+                span{
+                    margin-bottom: 8px;
+                }
+            }
+           
+            .owl-prev{
+                left: 20px;
+            }
+            .owl-next{
+                right: 20px;
+            }
+        }
+        .owl-dots{
+            text-align: center;
+            .active{
+                background-color: $color-primary;
+            }
+            button{
+                margin: 0 5px;
+                border:1px solid $color-primary;
+                height: 10px;
+                width: 10px;
+                background-color: #fff;
+                
+                border-radius: 50%;
+            }
+        }  
+        }
+        .post__item{
+            padding:10px;
+        }
+        .post-sec__item{
+            box-shadow: 5px 5px 10px 0px rgba(128,128,128,0.3);
+            .img-box{
+                padding-top: 60%;
+                img{
+                    transition: 0.3s all ease;
+                    &:hover{
+                        transform: scale(1.1);
+                    }
+                }
+            }
+            .pos-sec__info{
+                padding:10px;
+            }
+            h4,p{
+                color: $color-dark2;
+                font-size: 16px;
+                letter-spacing: 1px;
+                display: -webkit-box;
+                overflow: hidden;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+
+                
+            }
+            h4{
+                color: $color-primary;
+                padding-top: 10px;
+                font-size: 20px;
+                font-weight: 700;
+                text-transform: uppercase;
+            }
+        }
+    }
+.img-box{
+    padding-top: 30%;
+    position: relative;
+    height: auto;
+    background-size: cover;
+    img{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        object-fit: cover;
+        object-position: 50% 50%;
+    }
+}
+@media only screen and (max-width:992px){
+    .col-md-hidden{
+        display: none;
+    }
+    .col-md-p1{
+        padding:10px;
+    }
+    .col-md-p2{
+        padding:20px;
+    }
+    .col-md-p3{
+        padding:30px;
+    }
+    .col-md-p4{
+        padding:40px;
+    }
+    .col-md-p5{
+        padding:10px;
+    }
+}
+footer{
+    background-color: $color-dark;
+    color: $color-white;
+    padding:20px;
+    img{
+        margin:20px 0;
+    }
+    ul{
+        margin: 0;
+    }
+    h3{
+        border-bottom: 1px solid #444;
+        padding-bottom: 5px;
+        font-size: 20px;
+        font-weight: 500;
+        color:$color-primary;
+        position: relative;
+        &::before{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            content: '';
+            width: 50px;
+            border-bottom: 3px solid $color-primary;
+        }
+    }
+    .wrapper{
+        box-shadow: unset;
+    }
+    a{
+        text-decoration: none;
+        color: #666;
+    }
+    ul.footer-policy{
+        li{
+            position: relative;
+            &:hover::before{
+                position: absolute;
+                content: '\f054';
+                font-family: "Font Awesome 5 Free";
+                font-weight: 600;
+                left: -10px;
+                font-size: 13px;
+                color: $color-primary;
+                top: 50%;
+                transform: translateY(-50%);
+                
+            }
+        }
+    }
+   ul{
+       &.footer-social{
+        li{
+            span{
+                color: #1a1a1a;
+                background: #444444;
+                border-radius: 100%;
+                margin-right: 8px;
+                width: 35px;
+                height: 35px;
+                text-align: center;
+                display: inline-block;
+                padding-top: 5px;   
+                padding-left: 5px;
+                &:hover{
+                    background-color: $color-primary;
+                    color: #fff;
+                }
+            }
+        }
+       }
+       padding:20px 0;
+       li{
+
+           span{
+               color: #fff;
+               padding-right: 5px;
+           }
+           list-style: none;
+           a{
+               padding:0;
+            display: inline-block;
+            font-size: 14px;
+            &:hover{
+                color: $color-primary;
+            }
+           }
+       }
+   }
+}
+#go-top{
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s all ease;
+    padding:10px;
+    bottom: 50px;
+    right: 50px;
+    border-radius: 50%;
+    border:2px solid $color-primary;
+    a{
+        color: $color-primary;
+    }
+    &:hover{
+        transition: 0.3s all ease;
+        color: #fff;
+        background-color: $color-primary;
+    }
+}
+@media only screen and (max-width:768px){
+    .p-md-0{
+        padding: 0;
+    }
+    .pt-sm-3{
+        padding-top: 30px;
+    }
+    .col-sm-hidden{
+        display: none;
     }
 }
