--- a/Frontend/scss/main.scss
+++ b/Frontend/scss/main.scss
@@ -6,8 +6,9 @@
 }
 /*color*/
 $color-primary: #004F98;
+$color-secondary: #3370A5;
 $color-white: #fff;
-$color-dark:#1A1A1A;;
+$color-dark:#313131;
 $color-dark2:#444;
 $color-muted:#ccc;
 // mixin
@@ -154,7 +155,7 @@ header {
                 color:$color-primary;
             }
         }
-        background-color: #333333;
+        background-color: $color-dark;
         &__cart {
             position: relative;
             margin-left: auto;
@@ -168,6 +169,207 @@ header {
     }
 }
 main {
+    .pagination
+    {
+        display: flex;
+        justify-content: center;
+        ul{
+            margin: 0;
+            list-style: none;
+            display: flex;
+            
+            li{
+                &.active a{
+                    border-color: $color-primary;
+                    color: #fff;
+                    background-color: $color-primary;
+                }
+                margin: 0 3px ;
+                a{
+                    
+                    width: 30px;
+                    height: 30px;
+                    display: flex;
+                    font-weight: 500;
+                    font-size: 20px;
+                    justify-content: center;
+                    align-items: center;
+                    color: #777;
+                    border: 2px solid #777;
+                    border-radius: 50%;
+                    i{
+                        font-size: 1.1rem;
+                    }
+                }
+            }
+        }
+    }
+    .breadcrumb{
+        border-radius: 0;
+        background-color: $color-primary;
+        text-transform: uppercase;
+        color: #fff;
+        .wrapper{
+            width: 78vw;
+            margin: 0 auto;
+            border: 0;
+            box-shadow: none;
+        }
+        h1{
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+        ul.list-page{
+            list-style: none;
+            li{
+                display: inline-block;
+                a{
+                    display: inline-block;
+                    color: #fff ;
+                }
+                &:not(:last-child)::after{
+                    content: '/';
+                    padding:0 8px;
+                }
+            }
+        }
+        select {
+            border:none;
+            color: #fff;
+            width: 100%;
+            border-radius: 50px;
+            padding: 10px;
+            background-color: $color-secondary;
+            option{
+                color: #333333;
+                background-color: #fff;
+            }
+        }
+    }
+    .layout-product{
+        padding-bottom: 30px;
+        .row-product{
+            & > div{
+                padding-bottom: 20px;
+            }
+            .sale-box{
+                position: absolute;
+                top: 5%;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: #fff;
+                z-index: 1;
+                left: -20px;
+                width:50px;
+                height: 50px;
+                background-color: $color-secondary;
+            }
+            .product__item{
+                &:hover .img-box img{
+                    transform: scale(1.1);
+                }
+                &:hover .img-box::after{
+                    margin-top: -40px;
+                }
+                a{
+                    color: $color-primary;
+                }
+                position: relative;
+                border: 1px solid rgba($color: #000000, $alpha: 0.2);
+                padding: 5px;
+                .img-box{
+                    padding:0;
+                    .img-box--inner{
+                        width: 100%;
+                        height: 100%;
+                        padding-top: 80%;
+                        img{
+                            transition: 0.3s all ease;
+                        }
+                    }
+                    &::after{
+                        transition: 0.2s all ease;
+                        position: absolute;
+                        background-color: rgba($color: $color-primary, $alpha: 0.8);
+                        color: #fff;
+                        text-align: center;
+                        content: 'XEM NHANH';
+                        width: 100%;
+                        padding:10px 0;
+                        margin-top: 0px;
+                    }
+                }
+                .product-info{
+                    .product-info__price{
+                        font-size: 1.2rem;
+                        font-weight: 500;
+                    }
+                    .old-price{
+                        color: #5885ac;
+                        text-decoration: dashed;
+                    }
+                    .new-price{
+                        font-size: 1.3rem;
+                        font-weight: 700;
+                    }
+                    &__name{
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        font-size: 1.6rem;
+                        padding-bottom: 5px;
+                        color:#333;
+                        font-weight: 700;
+                        margin: 5px 0;
+
+                    }
+                }
+                
+            }
+            
+        }
+        .filter-title{
+            font-size: 1.2rem;
+                text-transform: uppercase;
+                font-weight: 700;
+                color: #666;
+                padding-bottom: 10px;
+                border-bottom: 4px solid silver;
+
+        }
+        .filter-product{
+            .accordion-item{
+                &:not(:last-child){
+                    border-bottom: 1px solid #ececec;
+
+                }
+            }
+            .accordion-button{
+                text-align: start;
+                text-transform: uppercase;
+                font-size: 1rem;
+                width: 100%;
+                padding:5px 0;
+                background-color: #fff;
+                border: none;
+                outline: none;
+            }
+            ul{
+                list-style: none;
+                li{
+                    border-left: 1px solid #ececec;
+                    margin-left: 5px;
+                    padding-left: 10px;
+                    a{
+                        color: #000;
+                    }
+                }
+            }
+        }
+    }
     section{
         margin: 30px 0;
     }
@@ -584,7 +786,7 @@ main {
     }
 }
 footer{
-    background-color: $color-dark;
+    background-color: #1A1A1A;
     color: $color-white;
     padding:20px;
     img{
@@ -690,10 +892,12 @@ footer{
     border:2px solid $color-primary;
     a{
         color: $color-primary;
+        &:hover{
+            color:#fff;
+        }
     }
-    &:hover{
+    &:hover {
         transition: 0.3s all ease;
-        color: #fff;
         background-color: $color-primary;
     }
 }
